--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
-</head>
+</head>ro
 <body>
     <!-- Header -->
     <header id="header" class="fixed-top">
         <div class="container d-flex align-items-center justify-content-between">
-            <h1 class="logo">AXIT</h1>
+            <h1 class="logo">AX<span class="color-orange">IT</span></h1>
 
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link scrollto active" href="#hero">Features</a></li>
-                    <li><a class="nav-link scrollto" href="#about">About</a></li>
-                    <li><a class="nav-link scrollto" href="#services">Pricing</a></li>
-                    <li><a class="nav-link scrollto " href="#work">Reviews</a></li>
-                    <li><a class="nav-link scrollto " href="#blog">Contact</a></li>
+                    <li><a class="nav-link scrollto" href="#tabs">About</a></li>
+                    <li><a class="nav-link scrollto" href="#sub-list">Pricing</a></li>
+                    <li><a class="nav-link scrollto " href="#services">Reviews</a></li>
+                    <li><a class="nav-link scrollto " href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -42,13 +42,13 @@
             <div class="row">
               <div class="col-sm-12">
                 <div class="contact-mf">
-                  <div id="contact" class="box-shadow-full">
+                  <div id="contact-1" class="box-shadow-full">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-8 axit-left">
                             <div class="title-box-2">
                               <span class="title-left">
-                                <h4>AXIT</h4>
-                                <h5>WHEN YOU CARE ENOUGH TO SEND THE VERY BEST</h5>
+                                <p class="title">AX<span class="color-orange">IT</span></p>
+                                <p class="name">MODERN AXURE TEMPLTE <br> FOR BEAUTIFUL PROTOTYPES</p>
                               </span>
                             </div>
                             <div class="more-info">
@@ -61,40 +61,33 @@
                                 <button class="btn-default">Downnload</button>
                             </div>
                         </div>
-                      <div class="col-md-6">
+                      <div class="col-md-4">
                         <div class="title-box-2">
                           
                         </div>
                         <div>
-                          <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                          <form action="#" method="post" role="form" class="php-email-form">
                             <div class="row">
-                              <div class="col-md-12 mb-3">
-                                <div class="form-group">
-                                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                                </div>
+                              <div class="col-md-12">
+                                <div class="header">Try your <span>&nbsp;FREE&nbsp;</span> Trial Today</div>
                               </div>
-                              <div class="col-md-12 mb-3">
-                                <div class="form-group">
-                                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                                </div>
-                              </div>
-                              <div class="col-md-12 mb-3">
-                                <div class="form-group">
-                                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                              <div class="col-md-12 ">
+                                <div class="form-group d-flex justify-content-center">
+                                  <input type="text" name="name" class="form-control" id="name" placeholder="Name" required>
                                 </div>
                               </div>
                               <div class="col-md-12">
-                                <div class="form-group">
-                                  <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                                <div class="form-group d-flex justify-content-center">
+                                  <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
                                 </div>
                               </div>
-                              <div class="col-md-12 text-center my-3">
-                                <div class="loading">Loading</div>
-                                <div class="error-message"></div>
-                                <div class="sent-message">Your message has been sent. Thank you!</div>
+                              <div class="col-md-12">
+                                <div class="form-group d-flex justify-content-center">
+                                  <input type="password" class="form-control" name="password" id="password" placeholder="Password" required>
+                                </div>
                               </div>
                               <div class="col-md-12 text-center">
-                                <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
+                                <button type="submit" class="btn-get-start">Get started</button>
                               </div>
                             </div>
                           </form>
@@ -117,6 +110,105 @@
 
 
       <!-- ======= Services Section ======= -->
+      <section id="tabs" class="services-mf pt-5 route">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8">
+              <div class="pc-tab">
+                <input checked="checked" id="tab1" type="radio" name="pct" />
+                <input id="tab2" type="radio" name="pct" />
+                <input id="tab3" type="radio" name="pct" />
+                <nav>
+                  <ul>
+                    <li class="tab1">
+                      <label for="tab1">TAB 1</label>
+                    </li>
+                    <li class="tab2">
+                      <label for="tab2">TAB 2</label>
+                    </li>
+                    <li class="tab3">
+                      <label for="tab3">TAB 3</label>
+                    </li>
+                  </ul>
+                </nav>
+                <section>
+                  <div class="tab1">
+                    <h2>Tabs with soft transitioning effect.</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus itaque quidem minus nostrum, voluptatem accusamus aspernatur quia harum ratione, officia laudantium inventore autem doloribus atque labore numquam non. Hic, animi.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate corporis ullam laborum corrupti, nobis necessitatibus omnis excepturi odit vel aspernatur!</p>
+                    <button>Download</button>
+                  </div>
+                  <div class="tab2">
+                    <h2>Second</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum nesciunt ipsum dolore error repellendus officiis aliquid a, vitae reprehenderit, accusantium vero, ad. Obcaecati numquam sapiente cupiditate. Praesentium eaque, quae error!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, maiores.</p>
+                  </div>
+                  <div class="tab3">
+                    <h2>Third</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, nobis culpa rem, vitae earum aliquid.</p>
+                  </div>
+                </section>
+              </div>
+                
+            </div>
+            <div class="col-md-4 img-city"></div>
+          </div>
+        </div>
+      </section><!-- End Services Section -->
+
+      <section id="sub-list" class="services-mf pt-5 route page-3">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 img-page-3"></div>
+            <div class="col-md-8 d-flex  flex-column right-page">
+              <div>
+                <p class="title">Sub list section</p>
+                <div class="line"></div>
+                <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit.rum voluptates quia obcaecati adipisci, amet molestiae ad hic, qui atque maxime sint magni alias inventore, assumenda veritatis fugit quibusdam expedita. Exercitationem, molestiae?</div>
+              </div>
+              <div class="col-md-12 row-1 d-flex justify-content-between">
+                <div class="col-md-12 container-circle">
+                  <i class="bi bi-briefcase"></i>
+                </div>
+                <div class="d-flex flex-column justify-content-start ms-5">
+                  <h4 class="s-title">Text 1</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-12 row-1 d-flex justify-content-between">
+                <div class="col-md-12 container-circle">
+                  <i class="bi bi-briefcase"></i>
+                </div>
+                <div class="d-flex flex-column justify-content-start ms-5">
+                  <h4 class="s-title">Text 1</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section><!-- End Services Section -->
+
+      <section id="standard" class="services-mf pt-5 route page-4">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8 d-flex  flex-column left-page">
+              <div>
+                <p class="title">Standard Picture Section</p>
+                <div class="line"></div>
+                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore tenetur voluptate aut! Harum ex earum ullam iure iste pariatur quos facilis, explicabo eveniet, velit necessitatibus veniam fuga quae sapiente ab porro voluptatem repellat voluptates? Fuga dolorum provident quod, impedit, voluptates non optio quis harum voluptas adipisci ad. Earum, enim.</div>
+                <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit.rum voluptates quia obcaecati adipisci, amet molestiae ad hic, qui atque maxime sint magni alias inventore, assumenda veritatis fugit quibusdam expedita. Exercitationem, molestiae?</div>
+              </div>
+            </div>
+            <div class="col-md-4 img-page-4"></div>
+          </div>
+        </div>
+      </section><!-- End Services Section -->
+
       <section id="services" class="services-mf pt-5 route">
         <div class="container">
           <div class="row">
@@ -182,8 +274,6 @@
         </div>
       </section><!-- End Services Section -->
 
-
-
           <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
         <div class="container position-relative">
@@ -194,22 +284,17 @@
               <div class="swiper-slide">
                 <div class="testimonial-item">
                     <div class="title-box text-center">
-                        <h3 class="title-a">
-                          WHY THIS IS AWESOME
-                        </h3>
-                        <p class="subtitle-a">
-                          Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        </p>
+                        <div class="title-a">
+                          STYLISH AXURE DESIGN
+                        </div>
                         <div class="line-mf">
                         </div>
                       </div>
                   <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                    Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
                   </p>
                   <div>
-                    <button class="btn-default">Download</button>
+                    <button class="btn-download">Download</button>
                   </div>
                 </div>
               </div><!-- End testimonial item -->
@@ -217,37 +302,37 @@
             </div>
             <div class="swiper-pagination"></div>
           </div>
-  
         </div>
-      </section><!-- End Testimonials Section -->
+      </section>
+      <!-- End Testimonials Section -->
 
       <section id="contact" class="contact">
         <div class="container" data-aos="fade-up">
-          <div class="section-title">
-            <h2>Contact</h2>
+          <div class="section-title d-flex flex-column align-items-center">
+            <div class="title">CONTACT US</div>
+            <div class="line"></div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, voluptatem.</div>
           </div>
   
             <div class="col-lg-12 mt-5 mt-lg-0">
-  
-              <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+              <form action="forms/contact.php" method="post" role="form" class="form-contact">
                 <div class="row">
-                  <div class="col-md-6 form-group">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <input type="text" name="name" class="form-control" id="name" placeholder="Name" required>
+                    </div>
+                    <div class="form-group mt-3">
+                      <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
+                    </div>
+                    <div class="form-group mt-3">
+                      <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                    </div>
                   </div>
-                  <div class="col-md-6 form-group mt-3 mt-md-0">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                  <div class="col-md-6">
+                    <div class="form-group mt-3">
+                      <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                    </div>
                   </div>
-                </div>
-                <div class="form-group mt-3">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-                </div>
-                <div class="form-group mt-3">
-                  <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-                </div>
-                <div class="my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
                 </div>
                 <div class="text-center"><button type="submit">Send Message</button></div>
               </form>
@@ -265,21 +350,14 @@
   <footer id="footer">
     <div class="container">
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
+        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: [license-url] -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End Footer -->
