--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
                     <li><a class="nav-link scrollto" href="#tabs">About</a></li>
                     <li><a class="nav-link scrollto" href="#sub-list">Pricing</a></li>
                     <li><a class="nav-link scrollto " href="#services">Reviews</a></li>
-                    <li><a class="nav-link scrollto " href="#contact">Contact</a></li>
+                    <li><a class="nav-link scrollto " href="#contact">Contact</a></li>  
                 </ul>
+                <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
+            
         </div>
     </header>
     <!-- end header -->
